Peer-reviewing done

--- a/report/sections/ch8-perspective.tex
+++ b/report/sections/ch8-perspective.tex
@@ -1,9 +1,9 @@
-Due to our big scope, and issues we ran into during development, we did not achieve one full prototype. Rather, we achieved two separate prototypes that showcase separate aspects of our scope. The first thing that is necessary for the continuation of development is to combine these two prototypes. Only then will we have a clear idea of what our prototype is capable of, and what would need to be worked on for the full product.
+Due to our big scope, and the issues we ran into during development, we did not achieve one full prototype. Rather, we achieved two separate prototypes that showcase separate aspects of our scope. The first thing that is necessary for the continuation of development is to combine these two prototypes. Only then, will we have a clear idea of what our prototype is capable of, and what would need to be worked on for the full product.
 
-The laser we build works as a proof-of-concept. Before putting the two prototypes together, it is necessary to vastly increase the turning speed of the laser. The laser can take up to 255 measurements per second but at the current setup we went for precision over speed. Hector SLAM was made for faster turning lasers. From our current state we can increase the speed and keep the precision. Once that is done, we can attempt to get SLAM to work on making continues 2D map of it's surroundings.
+The laser we built works as a proof-of-concept. Before putting the two prototypes together, it is necessary to vastly increase the turning speed of the laser. The laser can take up to 255 measurements per second but at the current setup we went for precision over speed. Hector-slam was made for faster turning lasers. From our current state, we would need to increase the speed and keep the precision. Once that is done, we can attempt to get SLAM to work on making continues 2D map of its surroundings.
 
-With SLAM working, it is quite simple to put the two prototypes together and get a much better proof-of-concept for our scope. Of course, with the two prototypes together, many adjustments can be made for them to work better, such as the navigation reading the map to know where it has already mapped, and where it should try to map next. The rover could have multiple navigation algorithms setup for different environments and tasks. 
+With SLAM working, it is quite simple to put the two prototypes together and get a much better proof-of-concept for our scope. Of course, with the two prototypes together, many adjustments should be made to better work together, such as the navigation system reading the map to know where it has already gone, and where it should try to map next. The rover should have multiple navigation algorithms set up for different environments and tasks. 
 
-This proof-of-concept is still only for 2D-mapping, and we would like to use this technology in other planets and umapped territory in the earth. For that task, 3D-mapping is a much better fit. In order to expand our combined prototypes into a 3D capable mapper, we would need a combination of stereoscopic vision, barometric sensors, or any sort of other sensor that can give a height reading. Furthermore, our laser is mostly made for mapping of surfaces that are normal to te direction of the laser, this would not work very well on sloping hills that is found on most uninhabbited places.
+This proof-of-concept is still only designed for 2D-mapping, and we would like to use this technology in other planets and unmapped territory on Earth. For that task, 3D-mapping is a much better fit. In order to expand our combined prototypes into a 3D capable mapper, we would need a combination of stereoscopic vision, barometric sensors, or any sort of other sensor that can give a height reading. Furthermore, our laser is mostly made for mapping of surfaces that are normal to te direction of the laser, this would not work very well on sloping hills that is found on most uninhabited places.
 
-Hector SLAM uses landscape extracting to find reference points in a 2D scan. Using a similar system we could use a 2D spinning laser for obstacle avoidance and navigation through unknown terrain. Our prototypes takes a cheap laser module, that goes for around 600 dkk\cite{lidarl} plus 3D printed case and stepper motor, that can give the same output, and i some cases even better in terms of range and refresh rate, as a 2700 dkk\cite{lidar360} lidar model. Implementation of a low cost lidar system like this combined with small and low cost control unit, like the raspberry pi, really opens up possibilities for 2D and 3D map making of our surrounding and even extend that to other planets. 
+Hector-slam uses landscape extracting to find reference points in a 2D scan. Using a similar system we could use a 2D spinning laser for obstacle avoidance and navigation through unknown terrain. Our prototypes takes a cheap laser module, that goes for around 600 DKK\cite{lidarl} plus the costs of the 3D printed case and stepper motor, that can give the same output, and in some cases even better in terms of range and refresh rate, as a 2700 DKK\cite{lidar360} LIDAR model. Implementation of a low cost LIDAR laser system like this combined with small and low cost control unit, like the Raspberry Pi, really opens up possibilities for 2D and 3D mapping of our surroundings and even extend that to other planets. 
